# open-mover

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  font_fragment.glsl  fragment.glsl  quad_vertex.glsl  texture_quad_fragment.glsl  vcpkg-configuration.json  vcpkg.json  vertex.glsl
assets/shaders/: default_quad_fragment.glsl  font_vertex.glsl  quad_vertex.glsl  texture_quad_fragment.glsl
include/: stb_image_write.h
include/GLFW/: glfw3native.h
include/KHR/: khrplatform.h
include/dlg/: dlg.h  output.h
include/freetype/: ftadvanc.h  ftbbox.h  ftbdf.h  ftbitmap.h  ftbzip2.h  ftcache.h  ftchapters.h  ftcid.h  ftcolor.h  ftdriver.h  fterrdef.h  fterrors.h  ftfntfmt.h  ftgasp.h  ftglyph.h  ftgxval.h  ftgzip.h  ftimage.h  ftincrem.h  ftlcdfil.h  ftlist.h  ftlogging.h  ftlzw.h  ftmac.h  ftmm.h  ftmodapi.h  ftmoderr.h  ftotval.h  ftoutln.h  ftparams.h  ftpfr.h  ftrender.h  ftsizes.h  ftsnames.h  ftstroke.h  ftsynth.h  ftsystem.h  fttrigon.h  fttypes.h  ftwinfnt.h  (+5 more)
include/freetype/config/: ftconfig.h  ftheader.h  ftoption.h  ftstdlib.h  integer-types.h  mac-support.h  public-macros.h
include/freetype/internal/: autohint.h  cffotypes.h  cfftypes.h  compiler-macros.h  ftcalc.h  ftdebug.h  ftdrv.h  ftgloadr.h  fthash.h  ftmemory.h  ftmmtypes.h  ftobjs.h  ftpsprop.h  ftrfork.h  ftserv.h  ftstream.h  fttrace.h  ftvalid.h  psaux.h  pshints.h  sfnt.h  svginterface.h  t1types.h  tttypes.h  wofftypes.h
include/freetype/internal/services/: svbdf.h  svcfftl.h  svcid.h  svfntfmt.h  svgldict.h  svgxval.h  svkern.h  svmetric.h  svmm.h  svotval.h  svpfr.h  svpostnm.h  svprop.h  svpscmap.h  svpsinfo.h  svsfnt.h  svttcmap.h  svtteng.h  svttglyf.h  svwinfnt.h
include/glad/: glad.h
include/glm/simd/: common.h  geometric.h  matrix.h  neon.h
lib/: libGLEW.so.2.2.0
lib/objs/: apinames  autofit.lo  bdf.lo  cff.lo  dlg.lo  ftbase.lo  ftbbox.lo  ftbdf.lo  ftbitmap.lo  ftbzip2.lo  ftcache.lo  ftcid.lo  ftdebug.lo  ftfstype.lo  ftgasp.lo  ftglyph.lo  ftgxval.lo  ftgzip.lo  ftinit.lo  ftlzw.lo  ftmm.lo  ftmodule.h  ftotval.lo  ftpatent.lo  ftpfr.lo  ftstroke.lo  ftsynth.lo  ftsystem.lo  fttype1.lo  ftwinfnt.lo  libfreetype.la  pcf.lo  pfr.lo  psaux.lo  pshinter.lo  psnames.lo  raster.lo  sdf.lo  sfnt.lo  smooth.lo  (+6 more)
lib/objs/.libs/: libfreetype.lai  libfreetype.so.6.20.1  libfreetype.ver
src/: .clangd  assert.cpp  assert.h  audio.c  audio.cpp  audio.h  ebo.c  ebo.cpp  ebo.h  font.cpp  font.h  font_system.cpp  font_system.h  glad.c  hello_window.cpp  input.c  input.cpp  input.h  main.c  main.cpp  playing_sounds.cpp  rect.c  rect.cpp  rect.h  rendering_textures.cpp  resource_manager.cpp  resource_manager.h  resources.cpp  resources.h  shader.c  shader.cpp  shader.h  text_rendering.cpp  texture.c  texture.cpp  texture.h  textured_rect.c  textured_rect.cpp  textured_rect.h  types.h  (+12 more)
src/Core/: ZipLib.cpp  ZipLib.h  audio.cpp  audio.h  core.h  ebo.cpp  ebo.h  font_system.cpp  font_system.h  input.cpp  input.h  log.cpp  log.h  shader.cpp  shader.h  texture.cpp  texture.h  vao.cpp  vao.h  vbo.cpp  vbo.h
src/Examples/: .clangd  aabb_collision.cpp  animation_example.cpp  delayed_sound.cpp  flappy_bird.cpp  fps_display.cpp  hello_window.cpp  playing_sounds.cpp  point_vs_rect.cpp  rendering_textures.cpp  snake.cpp  tank_trouble.cpp  text_rendering.cpp  top_down_movement.cpp
src/Resource/: animation.cpp  animation.h  font.cpp  font.h  resource_manager.cpp  resource_manager.h  resources.cpp  resources.h  texture_data.cpp  texture_data.h
src/Shapes/: animated_rect.cpp  animated_rect.h  colored_rect.cpp  colored_rect.h  rect.cpp  rect.h  shapes.h  textured_rect.cpp  textured_rect.h
src/UI/: text.cpp  text.h
src/Utilities/: assert.cpp  assert.h  types.h  util.cpp  util.h  utilities.h
src/Window/: .clangd  renderer.cpp  renderer.h  timer.cpp  timer.h  window.cpp  window.h
